--- a/src/app/website/components/nav/nav.component.html
+++ b/src/app/website/components/nav/nav.component.html
@@ -17,9 +17,8 @@
   <div class="side-menu" [class.active]="activeMenu">
     <button (click)="toggleMenu()">Close</button>
     <ul>
-      <li><a href="">All</a></li>
-      <li><a href="">Clothes</a></li>
-      <li><a href="">Electronics</a></li>
+      <li><a routerLink="home">All</a></li>
+      <li *ngFor="let item of categories"><a [routerLink]="['/category', item.id]">{{item.name}}</a></li>
     </ul>
   </div>
 </div>
@@ -30,15 +29,17 @@
         <img src="./assets/svg/logo_yard_sale.svg" alt="logo">
       </a>
       <ul>
-        <li><a href="">All</a></li>
-        <li><a href="">Clothes</a></li>
-        <li><a href="">Electronics</a></li>
+        <li><a routerLinkActive="active" routerLink="home">All</a></li>
+        <li *ngFor="let item of categories"><a routerLinkActive="active" [routerLink]="['/category', item.id]">{{item.name}}</a></li>
       </ul>
     </nav>
     <div class="info">
       <div class="account">
         <button *ngIf="!profile; else elseBlock" (click)="login()">Login</button>
-        <ng-template #elseBlock>{{ profile?.email }}</ng-template>
+        <ng-template #elseBlock>
+          <a routerLink="/profile"> {{profile?.email}} </a>
+          <button (click)="logout()">Logout</button>
+        </ng-template>
       </div>
       <div class="cart">
         <a href="">
